# Hackathone-2-TODO-Spec-Driven-Development

.claude/agents/: ai-agent-builder.md  cloud-architect.md  code-reviewer.md  database-architect.md  docs-writer.md  frontend-specialist.md  spec-orchestrator.md
Phase 1/: .gitignore  README.md
Phase 2/: .gitignore  DEPLOYMENT_GUIDE.md  QUICKSTART.md  QUICK_DEPLOY.md
Phase 2/backend/: pyproject.toml
Phase 2/backend/app/: database.py
Phase 2/backend/app/models/: __init__.py
Phase 2/backend/app/routes/: tasks.py
Phase 2/backend/app/schemas/: __init__.py
Phase 2/frontend/: .env.local.example  package.json  tailwind.config.ts
Phase02/: DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  README.md
Phase02/backend/: RENDER_DEPLOYMENT.md  RENDER_QUICKSTART.md  TESTING.md  pyproject.toml  render.yaml  requirements.txt  run_server.py
Phase02/frontend/: postcss.config.js  vercel.json
Phase03/: .gitignore  HACKATHON_COMPLIANCE_FINAL.md  README.md
Phase03/backend/: .env.example  .gitignore  MCP_IMPLEMENTATION_SUMMARY.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt  setup_postgres.sql  start.sh  verify_mcp.py
Phase03/frontend/: README.md  SETUP.md  next.config.js  package.json
Phase04/: .gitignore  DEPLOYMENT.md  README.md  compose.yaml
Phase04/backend/: README.md  get_token.py
Phase04/frontend/: Dockerfile  package-lock.json  vercel.json
Phase04/k8s/: namespace.yaml  secrets.yaml
Phase05/: .gitignore  DEPLOYMENT.md  ORACLE_CLOUD_GUIDE.md  README.md  docker-compose.yml
Phase05/backend/: Dockerfile  (+8 more)
src/: todo_app.py
tests/: test_todo_app.py
(+278 files in other folders)
